src/tests/snapshots/swayward__tests__window_opening__check_target_output_and_workspace@ws1-out1-wfsA1-spB2.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: A1\nset parent: B2\nconfig:\noutput \"headless-2\" {\n    layout {\n        border {\n            on\n        }\n    }\n}\n\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n\n    layout {\n        border {\n            width 10\n        }\n\n        default-column-width {\n            fixed 500\n        }\n    }\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-workspace \"ws-1\"\n    open-on-output \"headless-1\"\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-2\"\n}"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
